[package]
name = "evil-id"
description = "A very easy to use (and evil) id type."
version = "0.1.1"
edition = "2024"
repository = "https://github.com/the-aNamee/evil-id"
readme = "README.md"
license = "MIT"
keywords = ["id", "evil"]
authors = ["Anamee"]

[features]
serde = ["dep:serde"]
number = []
beep = []
all = ["serde", "number", "beep"]

[dependencies]
serde = { optional = true, version = "1.0.219" }
rand = "0.9.2"
phf = { version = "0.13.1", features = ["macros"], default-features = false }
